front end login added

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -100,13 +100,15 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-primary" type="button">Sign Up</button>
+                    <button id="signup-button" class="btn btn-primary" type="button">Login</button>
                 </form>
             </div>
         </div>
     </nav>
 
     <p>Hello World</p>
+
+
 </body>
 
 </html>
