--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -11,8 +11,8 @@
     <!-- jQuery -->
     <script src="../js/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="../css/home.css">
-    <script src="../js/home.js"></script>
+    <link rel="stylesheet" href="../css/login.css">
+    <script src="../js/login.js"></script>
 
     <title>Home Page</title>
 </head>
@@ -24,7 +24,8 @@
                 <h1 class="fw-bold text-primary">Sign In</h1>
                 <p class="text-secondary">Welcome back! Please sign in to continue.</p>
             </div>
-            <form id="signInForm" method="POST" action="#">
+            <!-- <form id="signInForm" method="POST" action="#"> -->
+            <form id="signInForm">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email Address</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email"
