--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -15,13 +15,36 @@
     <script src="../js/home.js"></script>
 
     <style>
-        /* Make navbar transparent */
+        /* General Navbar Styles */
         .navbar {
-            background-color: transparent;
-            transition: background-color 0.3s;
+            background-color: rgba(255, 255, 255, 0.7) !important;
+            /* Translucent background */
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 1050;
+            /* Place the navbar above the image */
         }
 
-        /* Sticky navbar */
+        /* Make the first navbar not sticky */
+        .navbar-first {
+            position: relative;
+        }
+
+        /* Second Navbar Styles */
+        .navbar-second {
+            background-color: lightgrey;
+            /* Grey background color */
+            border-radius: 20px;
+            padding: 10px 20px;
+            color: #333;
+            margin: 0 auto;
+            /* Inline margin to center */
+            max-width: 1200px;
+            /* Limit the width of the navbar */
+        }
+
+        /* Sticky second navbar */
         .sticky-top {
             position: sticky;
             top: 0;
@@ -34,18 +57,19 @@
         }
 
         /* Change link color from grey to blue on hover */
-        .nav-link {
-            color: grey;
+        .navbar-second .nav-link {
+            color: #333;
+            /* Darker text color */
             transition: color 0.3s, transform 0.3s;
         }
 
-        .nav-link:hover {
+        .navbar-second .nav-link:hover {
             color: blue;
             transform: scale(1.1);
         }
 
         /* Add underline effect on hover */
-        .nav-link:hover::after {
+        .navbar-second .nav-link:hover::after {
             content: "";
             display: block;
             margin: 0 auto;
@@ -70,14 +94,63 @@
         .navbar:hover {
             background-color: rgba(255, 255, 255, 0.9);
         }
+
+        /* Position the image behind the navbar */
+        .hero-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            /* Full height */
+            object-fit: cover;
+            z-index: 1;
+            /* Place the image behind the navbar */
+        }
+
+        /* Ensure content does not overlap image */
+        .content {
+            position: relative;
+            z-index: 2;
+            padding-top: 100vh;
+            /* Padding to ensure content is below the image */
+        }
+
+        /* Welcome text styling on top of image */
+        .welcome-text {
+            position: absolute;
+            top: 50%;
+            /* Center vertically */
+            left: 50%;
+            /* Center horizontally */
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2.5rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+            z-index: 2;
+        }
+
+        /* Research Pages styling */
+        .research-section {
+            margin-top: 60px;
+        }
     </style>
 
     <title>Home Page</title>
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <!-- Image behind the first navbar -->
+    <img src="../components/hero_image.jpg" alt="Sample Image" class="img-fluid hero-image">
+
+    <!-- Welcome Text on the Image -->
+    <div class="welcome-text text-center">
+        <h2>Welcome to Our Website</h2>
+        <p>Explore the research pages below.</p>
+    </div>
+
+    <!-- First Navbar (Translucent) -->
+    <nav class="navbar navbar-expand-lg navbar-light navbar-first">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Brand</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -100,15 +173,91 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button id="signup-button" class="btn btn-primary" type="button">Login</button>
+                    <button id="signup-button" class="btn btn-primary" type="button">Sign Up</button>
                 </form>
             </div>
         </div>
     </nav>
 
-    <p>Hello World</p>
+    <!-- Content Section Below Navbar -->
+    <div class="content">
+        <!-- Second Navbar (Sticky) -->
+        <nav class="navbar-second navbar-expand-lg navbar-dark sticky-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#secondNavbarNav"
+                    aria-controls="secondNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="secondNavbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#research1">Research Page 1</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#research2">Research Page 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#research3">Research Page 3</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#research4">Research Page 4</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#research5">Research Page 5</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
+        <!-- Research Pages Section -->
+        <div class="research-section">
+            <div id="research1" class="container my-5">
+                <h2>Research Page 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies dolor a arcu cursus, non
+                    fringilla orci fermentum. Ut varius dolor vitae magna aliquam, sit amet tincidunt eros tincidunt.
+                    Sed ac ligula justo. Vestibulum ac orci nec urna pretium maximus.</p>
+            </div>
 
+            <div id="research2" class="container my-5">
+                <h2>Research Page 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet vehicula nunc. Nulla
+                    facilisi. Curabitur lobortis ligula non nunc consequat, et venenatis justo tempus. Etiam vel
+                    turpis sit amet nulla hendrerit sollicitudin at non nunc.</p>
+            </div>
+
+            <div id="research3" class="container my-5">
+                <h2>Research Page 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In varius malesuada velit, in blandit nunc
+                    suscipit non. Donec mollis dui id urna luctus, vel rutrum erat dapibus. Sed sit amet maximus enim,
+                    et lacinia libero. Curabitur posuere risus id dui venenatis, a vulputate ex varius.</p>
+            </div>
+
+            <div id="research4" class="container my-5">
+                <h2>Research Page 4</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia tincidunt nisi, nec feugiat
+                    nulla
+                    tincidunt vel. Cras eget justo odio. Suspendisse ullamcorper placerat lorem, at volutpat urna
+                    cursus ac. Fusce vitae tortor enim.</p>
+            </div>
+
+            <div id="research5" class="container my-5">
+                <h2>Research Page 5</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel viverra odio. Phasellus fringilla
+                    vel libero sit amet porttitor. Fusce ac orci risus. Quisque at leo vel arcu convallis convallis et
+                    sit amet leo. Nam sed eros odio. Etiam tempor, tortor non convallis facilisis, felis elit feugiat
+                    ante, in auctor justo dui vitae dui.</p>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function () {
+            $('#signup-button').click(function () {
+                window.location.href = 'signup.html';
+            });
+        });
+    </script>
 </body>
 
 </html>
