--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -254,7 +254,7 @@
     <script>
         $(document).ready(function () {
             $('#signup-button').click(function () {
-                window.location.href = 'signup.html';
+                window.location.href = 'login';
             });
         });
     </script>
