Frontend: Global files added

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -10,6 +10,9 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- jQuery -->
     <script src="../js/jquery.min.js"></script>
+    <!-- Global -->
+    <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
 
     <link rel="stylesheet" href="../css/home.css">
     <script src="../js/home.js"></script>
@@ -63,21 +66,21 @@
             transition: color 0.3s, transform 0.3s;
         }
 
-        .navbar-second .nav-link:hover {
-            color: blue;
-            transform: scale(1.1);
-        }
+            .navbar-second .nav-link:hover {
+                color: blue;
+                transform: scale(1.1);
+            }
 
-        /* Add underline effect on hover */
-        .navbar-second .nav-link:hover::after {
-            content: "";
-            display: block;
-            margin: 0 auto;
-            width: 50%;
-            height: 2px;
-            background-color: blue;
-            transition: width 0.3s;
-        }
+                /* Add underline effect on hover */
+                .navbar-second .nav-link:hover::after {
+                    content: "";
+                    display: block;
+                    margin: 0 auto;
+                    width: 50%;
+                    height: 2px;
+                    background-color: blue;
+                    transition: width 0.3s;
+                }
 
         /* Custom button styling */
         .btn-primary {
@@ -85,10 +88,10 @@
             transition: transform 0.3s, background-color 0.3s;
         }
 
-        .btn-primary:hover {
-            background-color: #0056b3;
-            transform: scale(1.1);
-        }
+            .btn-primary:hover {
+                background-color: #0056b3;
+                transform: scale(1.1);
+            }
 
         /* Remove navbar transform on hover */
         .navbar:hover {
