Frontend: Minor fix

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -144,7 +144,7 @@
 
 <body>
     <!-- Image behind the first navbar -->
-    <img src="../components/hero_image.jpg" alt="Sample Image" class="img-fluid hero-image">
+    <img src="../assets/hero_image.jpg" alt="Sample Image" class="img-fluid hero-image">
 
     <!-- Welcome Text on the Image -->
     <div class="welcome-text text-center">
@@ -157,7 +157,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Brand</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -188,7 +188,7 @@
         <nav class="navbar-second navbar-expand-lg navbar-dark sticky-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#secondNavbarNav"
-                    aria-controls="secondNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        aria-controls="secondNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="secondNavbarNav">
@@ -217,39 +217,49 @@
         <div class="research-section">
             <div id="research1" class="container my-5">
                 <h2>Research Page 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies dolor a arcu cursus, non
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies dolor a arcu cursus, non
                     fringilla orci fermentum. Ut varius dolor vitae magna aliquam, sit amet tincidunt eros tincidunt.
-                    Sed ac ligula justo. Vestibulum ac orci nec urna pretium maximus.</p>
+                    Sed ac ligula justo. Vestibulum ac orci nec urna pretium maximus.
+                </p>
             </div>
 
             <div id="research2" class="container my-5">
                 <h2>Research Page 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet vehicula nunc. Nulla
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet vehicula nunc. Nulla
                     facilisi. Curabitur lobortis ligula non nunc consequat, et venenatis justo tempus. Etiam vel
-                    turpis sit amet nulla hendrerit sollicitudin at non nunc.</p>
+                    turpis sit amet nulla hendrerit sollicitudin at non nunc.
+                </p>
             </div>
 
             <div id="research3" class="container my-5">
                 <h2>Research Page 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In varius malesuada velit, in blandit nunc
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In varius malesuada velit, in blandit nunc
                     suscipit non. Donec mollis dui id urna luctus, vel rutrum erat dapibus. Sed sit amet maximus enim,
-                    et lacinia libero. Curabitur posuere risus id dui venenatis, a vulputate ex varius.</p>
+                    et lacinia libero. Curabitur posuere risus id dui venenatis, a vulputate ex varius.
+                </p>
             </div>
 
             <div id="research4" class="container my-5">
                 <h2>Research Page 4</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia tincidunt nisi, nec feugiat
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia tincidunt nisi, nec feugiat
                     nulla
                     tincidunt vel. Cras eget justo odio. Suspendisse ullamcorper placerat lorem, at volutpat urna
-                    cursus ac. Fusce vitae tortor enim.</p>
+                    cursus ac. Fusce vitae tortor enim.
+                </p>
             </div>
 
             <div id="research5" class="container my-5">
                 <h2>Research Page 5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel viverra odio. Phasellus fringilla
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel viverra odio. Phasellus fringilla
                     vel libero sit amet porttitor. Fusce ac orci risus. Quisque at leo vel arcu convallis convallis et
                     sit amet leo. Nam sed eros odio. Etiam tempor, tortor non convallis facilisis, felis elit feugiat
-                    ante, in auctor justo dui vitae dui.</p>
+                    ante, in auctor justo dui vitae dui.
+                </p>
             </div>
         </div>
     </div>
