--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -13,41 +13,51 @@
 
     <link rel="stylesheet" href="../css/login.css">
     <script src="../js/login.js"></script>
+    <style>
 
+    </style>
     <title>Home Page</title>
 </head>
 
-<body>
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="card p-4 shadow-lg border-0" style="width: 100%; max-width: 400px; border-radius: 16px;">
-            <div class="text-center mb-4">
-                <h1 class="fw-bold text-primary">Sign In</h1>
-                <p class="text-secondary">Welcome back! Please sign in to continue.</p>
+<body class="bg-secondary3-800">
+    <div class="">
+        <div class="container d-flex justify-content-center align-items-center vh-100">
+            <div class="outer-white-box">
+                <div class="gradient">
+                    <div class="card gradient-inner">
+                        <div class="text-center mb-4">
+                            <h1 class="fw-bold text-primary">Sign In</h1>
+                            <p class="text-secondary">Welcome back! Please sign in to continue.</p>
+                        </div>
+                        <!-- <form id="signInForm" method="POST" action="#"> -->
+                        <form id="signInFo  rm">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email Address</label>
+                                <input type="email" class="form-control" id="email" name="email"
+                                    placeholder="Enter your email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" name="password"
+                                    placeholder="Enter your password" required>
+                            </div>
+                            <div class="d-grid">
+                                <a href="#" class="custom-button">
+                                    <span>Sign In</span>
+                                    <div class="arrow">➔</div>
+                                </a>
+
+                                <div class="text-center mt-3">
+                                    <a href="#" class="text-decoration-none">Forgot Password?</a>
+                                    <span class="mx-2 text-muted">|</span>
+                                    <a href="#" class="text-decoration-none">Create Account</a>
+                                </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <!-- <form id="signInForm" method="POST" action="#"> -->
-            <form id="signInForm">
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email"
-                        required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password"
-                        placeholder="Enter your password" required>
-                </div>
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-primary btn-lg">Sign In</button>
-                </div>
-                <div class="text-center mt-3">
-                    <a href="#" class="text-decoration-none">Forgot Password?</a>
-                    <span class="mx-2 text-muted">|</span>
-                    <a href="#" class="text-decoration-none">Create Account</a>
-                </div>
-            </form>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
