--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -2,24 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- bootstrap -->
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <script src="../js/bootstrap.bundle.min.js"></script>
-  <!-- jQuery -->
-  <script src="../js/jquery.min.js"></script>
-  <!-- Global -->
-  <script src="../js/script.js"></script>
-  <link rel="stylesheet" href="../css/style.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery -->
+    <script src="../js/jquery.min.js"></script>
+    <!-- Global -->
+    <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
 
-  <link rel="stylesheet" href="../css/login.css">
-  <script src="../js/login.js"></script>
-  <style>
+    <link rel="stylesheet" href="../css/login.css">
+    <script src="../js/login.js"></script>
 
-  </style>
-  <title>Home Page</title>
+    <title>Home Page</title>
 </head>
 
 <body class="bg-secondary3-800">
@@ -32,8 +30,8 @@
               <h1 class="fw-bold text-primary">Sign In</h1>
               <p class="text-secondary">Welcome back! Please sign in to continue.</p>
             </div>
-            <!-- <form id="signInForm" method="POST" action="#"> -->
-            <form id="signInFo  rm">
+            <!-- <form id="signInForm" > -->
+            <form id="signInForm" method="POST" action="#">
               <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
                 <input type="email" class="form-control input-container" id="email" name="email"
@@ -45,7 +43,7 @@
                   placeholder="Your password..." required>
               </div>
               <div class="d-grid">
-                <a href="#" class="custom-button" type="submit">
+                <a id="custom-button">
                   <span>Sign In</span>
                   <div class="arrow">➔</div>
                 </a>
@@ -55,17 +53,13 @@
                   <span class="mx-2 text-muted">|</span>
                   <a href="#" class="text-decoration-none">Create Account</a>
                 </div>
+              </div>
             </form>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Custom JS -->
-  <script src="scripts.js"></script>
 </body>
 
 </html>
