--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -34,7 +34,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: var(--primary-dark);">Brand</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -64,7 +64,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand d-sm-block d-lg-none" href="#">Research Pages</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#researchNavbar"
-                    aria-controls="researchNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                        aria-controls="researchNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="researchNavbar">
@@ -93,64 +93,74 @@
             <div id="research1" class="container my-5">
                 <div class="research-page">
                     <h2>Research Page 1</h2>
-                    <p>Content for Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
+                    <p>
+                        Content for Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         an
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..</p>
+                        ante, in auctor justo dui vitae dui..
+                    </p>
                 </div>
             </div>
 
             <div id="research2" class="container my-5">
                 <div class="research-page">
                     <h2>Research Page 2</h2>
-                    <p>Content forResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
+                    <p>
+                        Content forResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         anteResearch Page 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..</p>
+                        ante, in auctor justo dui vitae dui..
+                    </p>
                 </div>
             </div>
 
             <div id="research3" class="container my-5">
                 <div class="research-page">
                     <h2>Research Page 3</h2>
-                    <p>Content for RResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
+                    <p>
+                        Content for RResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         anch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aesearch Page 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..</p>
+                        ante, in auctor justo dui vitae dui..
+                    </p>
                 </div>
             </div>
 
             <div id="research4" class="container my-5">
                 <div class="research-page">
                     <h2>Research Page 4</h2>
-                    <p>Content forResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
+                    <p>
+                        Content forResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         an Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in av Research Page 4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..</p>
+                        ante, in auctor justo dui vitae dui..
+                    </p>
                 </div>
             </div>
 
             <div id="research5" class="container my-5">
                 <div class="research-page">
                     <h2>Research Page 5</h2>
-                    <p>Content for Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
+                    <p>
+                        Content for Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
                         ante, in avResearch Page 5. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..</p>
+                        ante, in auctor justo dui vitae dui..
+                    </p>
                 </div>
             </div>
         </div>
@@ -175,7 +185,7 @@
                             <div class="mb-3">
                                 <label for="message" class="form-label">Message</label>
                                 <textarea class="form-control" id="message" rows="5"
-                                    placeholder="Your Message"></textarea>
+                                          placeholder="Your Message"></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
