--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -48,11 +48,11 @@
                                     <div class="arrow">➔</div>
                                 </a>
 
-                                <div class="text-center mt-3">
+                                <!--<div class="text-center mt-3">
                                     <a href="#" class="text-decoration-none">Forgot Password?</a>
                                     <span class="mx-2 text-muted">|</span>
                                     <a href="#" class="text-decoration-none">Create Account</a>
-                                </div>
+                                </div>-->
                             </div>
                         </form>
                     </div>
