Both: Working on Login page
alert added for login page.
route added
Token saved in sessions

--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -22,7 +22,7 @@
 
 <body class="bg-secondary3-800">
     <div class="">
-        <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="container d-flex justify-content-center align-items-center">
             <div class="outer-white-box">
                 <div class="gradient">
                     <div class="card gradient-inner">
@@ -58,6 +58,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="alert alert-danger mt-3" id="error-alert" role="alert">
+            Invalid email or password
         </div>
     </div>
 </body>
